调整，添加留言板页面

--- a/views/head.html
+++ b/views/head.html
@@ -8,11 +8,11 @@
 					</div>
 					<div class="col-sm-9">
 						<div class="menu float_r">
-							<a href="#" target="_blank">高起专</a>
-							<a href="#" target="_blank">专升本</a>
-							<a href="#" target="_blank">高起本</a>
-							<a href="#">在线报名</a>
-							<a href="#">联系我们</a>
+							<a href="message-board.html"target="_blank">高起专</a>
+							<a href="message-board.html" target="_blank">专升本</a>
+							<a href="message-board.html" target="_blank">高起本</a>
+							<a ui-sref="online">在线报名</a>
+							<a ui-sref="contactus">联系我们</a>
 						</div>
 					</div>
 				</div>
