--- a/views/home.html
+++ b/views/home.html
@@ -80,7 +80,7 @@
 				<div class="news_list">
 					<ul class="clearfix">
 						<li class="clearfix" ng-repeat="item in items track by $index">
-							<a ui-sref="info.zsjz.aaa({id:item.article_id})">{{item.article_title}}</a>
+							<a ui-sref="info.zsjz({id:item.article_id})">{{item.article_title}}</a>
 						</li>
 					</ul>
 				</div>
@@ -95,7 +95,7 @@
 				<div class="news_list">
 					<ul class="clearfix">
 						<li class="clearfix" ng-repeat="item in items track by $index">
-							<a class="float_l" ui-sref="infoview({id:item.article_id})">{{item.article_title}}</a>
+							<a class="float_l" ui-sref="info.bkzn({id:item.article_id})">{{item.article_title}}</a>
 						</li>
 					</ul>
 				</div>
@@ -125,7 +125,7 @@
 				<div class="news_list">
 					<ul class="clearfix">
 						<li class="clearfix" ng-repeat="item in items track by $index">
-							<a class="float_l" ui-sref="infoview({id:item.article_id})">{{item.article_title}}</a>
+							<a class="float_l" ui-sref="info.jyxw({id:item.article_id})">{{item.article_title}}</a>
 						</li>
 					</ul>
 				</div>
