--- a/views/outside.html
+++ b/views/outside.html
@@ -1,23 +1,30 @@
-<div class="col-xs-12 col-sm-12 col-md-3 ">
-	<script type="text/javascript" src="js/dialog.js"></script>
+<div class="col-xs-12 col-sm-12 col-md-3 hidden-sm ">
 	<div class="apply" style="padding:0 0 15px 0;">
 		<!--S 代码-->
 		<div class="TB-focus" style="margin:0 auto">
 			<div class="hd">
 				<ul>
 
-					<li></li>
+					<li class="on"></li>
 
 				</ul>
 			</div>
 			<div class="bd">
-				<ul>
+				<div class="tempWrap" style="overflow:hidden; position:relative; width:250px">
+					<ul style="width: 750px; position: relative; overflow: hidden; padding: 0px; margin: 0px; left: -250px;">
+						<li class="clone" style="float: left; width: 250px;">
+							<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg"></a>
+						</li>
 
-					<li>
-						<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg" /></a>
-					</li>
+						<li style="float: left; width: 250px;">
+							<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg"></a>
+						</li>
 
-				</ul>
+						<li class="clone" style="float: left; width: 250px;">
+							<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg"></a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript">
@@ -30,16 +37,15 @@
 		</script>
 		<!--E 代码-->
 	</div>
-
-	<div class="asside_box1 hidden-sm">
+	<div class="asside_box1 ">
 		<div class="contact_box">
-			<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=936907843&amp;site=www.cactussoft.cn&amp;menu=yes" target="_blank"><img class="contactimg" src="images/contact_img.png" /></a>
+			<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=936907843&amp;site=www.cactussoft.cn&amp;menu=yes" target="_blank"><img class="contactimg" src="images/contact_img.png"></a>
 			<div class="wechat">
-				<img src="images/wechat1.jpg" />
+				<img src="images/wechat1.jpg">
 				<p>扫一扫获取报名资料</p>
 			</div>
 			<div class="online">
-				<p>免费通话<br /> 咨询热线：
+				<p>免费通话<br> 咨询热线：
 				</p>
 				<p style="color:#f4bc35 ; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:29px;">15303718943</p>
 
@@ -55,20 +61,20 @@
 			<div class="row">
 				<a class="col-xs-6 col-sm-6 " style="padding-right:5px;" href="http://www.chsi.com.cn/xlcx/lscx/query.do" target="_blank">
 					<dl class="education_item bg1">
-						<dt><img src="images/school_icon1.png"/></dt>
+						<dt><img src="images/school_icon1.png"></dt>
 						<dd>专升本</dd>
 					</dl>
 				</a>
 				<a class="col-xs-6 col-sm-6" style="padding-left:5px;" href="http://www.chsi.com.cn/xlcx/lscx/query.do" target="_blank">
 					<dl class="education_item bg2">
-						<dt><img src="images/school_icon2.png"/></dt>
+						<dt><img src="images/school_icon2.png"></dt>
 						<dd>高起专</dd>
 					</dl>
 				</a>
 				<a class="col-xs-6 col-sm-6" style="padding-right:5px;" href="http://www.chsi.com.cn/xlcx/lscx/query.do" target="_blank">
 					<dl class="education_item bg3">
-						<dt><img src="images/school_icon3.png"/></dt>
-						<dd>高起本</dd>
+						<dt><img src="images/school_icon3.png"></dt>
+						<dd>高升本</dd>
 					</dl>
 				</a>
 				<a class="col-xs-6 col-sm-6" style="padding-left:5px;" href="#">
