--- a/zm/css/login.css
+++ b/zm/css/login.css
@@ -81,9 +81,10 @@ h1 {
 }
 
 .login-box img {
-	width: 148px;
-	height: 42px;
-	border: none
+	padding: 3px 14px;
+    width: 120px;
+    height: 36px;
+    border: none;
 }
 
 input[type=text],
@@ -100,10 +101,11 @@ input[type=password] {
 	background: transparent;
 }
 
-button {
+.btn {
 	cursor: pointer;
 	width: 100%;
 	height: 44px;
+	line-height: 44px;
 	padding: 0;
 	background: #ef4300;
 	border: 1px solid #ff730e;
@@ -112,16 +114,14 @@ button {
 	color: #fff;
 	font-size: 24px;
 	letter-spacing: 15px;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, .1)
 }
-
 input:focus {
 	outline: none;
-	box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1) inset, 0 2px 7px 0 rgba(0, 0, 0, .2)
+	box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1) inset, 0 2px 7px 0 rgba(0, 0, 0, .2);
 }
 
-button:hover {
-	box-shadow: 0 15px 30px 0 rgba(255, 255, 255, .15) inset, 0 2px 7px 0 rgba(0, 0, 0, .2)
+.btn:active {
+	box-shadow: 0 15px 30px 0 rgba(255, 255, 255, .15) inset, 0 2px 7px 0 rgba(0, 0, 0, .2);
 }
 
 .screenbg {
